# compositor-status

./: .gitignore  CMakeLists.txt  CompositorNotifier.cpp  CompositorNotifier.h  CompositorPrefs.cpp  CompositorPrefs.h  LICENSE  README.md  main.cpp  settings.cpp  settings.h  settings.ui
